fix whitespace

--- a/web/src/components/_Markdown.scss
+++ b/web/src/components/_Markdown.scss
@@ -41,8 +41,11 @@
 
     code {
         display: inline-block;
-        white-space: nowrap;
         padding: 0.25rem;
+    }
+
+    p > code {
+        white-space: nowrap;
     }
 
     blockquote {
